feat: logout button is now working properly
this commit did:

1. updated docs
2. built the logout handler
3. built a delete session by id query
